syntax = "proto3";

option go_package = "/internal/app/auth/delivery/grpc/proto/";

// protoc --go_out=plugins=grpc:. *.proto

package Authorization;

message Session {
    uint32 user_id = 1;
    string cookie = 2;
    string cookie_expiration = 3;
}

message SignupCredentials {
    string username = 1;
    string email = 2;
    string password = 3;
    string confirm_password = 4;
}

message SignupInfo {
    string username = 1;
    string email = 2;
    string password = 3;
    string confirm_password = 4;
}


message User {
    uint32 id = 1;
    string username = 2;
    string email = 3;
    string avatar = 4;
}

message SignInCredentials {
    string email = 1;
    string password = 2;
}

message UserId {
    uint64 id = 1;
}

message Email {
    string email = 1;
}

message CreateSessionParams {
    uint32 user_id = 1;
}

message DeleteSessionInfo {
    bool success = 1;
}

message CheckSessionInfo {
}

message Nothing {
}

service Authorization {
    // User things
    rpc GetById(UserId) returns (User) {}
    rpc GetByEmail(Email) returns (User) {}
    rpc Update(User) returns (Nothing) {}
    rpc Store(User) returns (UserId) {}
    rpc Delete(UserId) returns (Nothing) {}

    // Session things
    rpc CreateSession(CreateSessionParams) returns (Session) {}
    rpc DeleteSession(Session) returns (DeleteSessionInfo) {}
    rpc CheckSession(Session) returns (CheckSessionInfo) {}
}
